--- a/public/screen.css
+++ b/public/screen.css
@@ -1,12 +1,62 @@
 :root {
-  font: 16px / 1 sans-serif;
+	font: 16px / 1 sans-serif;
 }
 
 html {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-  margin: 0;
-  min-height: 100%;
+	margin: 0;
+	min-height: 100%;
+	background-color: #fffd98;
+}
+
+h1 {
+	background-color: #3ddc97;
+	margin-left: 1rem;
+	margin-right: 1rem;
+	padding: 1rem;
+}
+
+.dealer-side {
+	background-color: #399e5a;
+	margin-left: 1rem;
+	margin-right: 1rem;
+	padding: 6rem;
+}
+
+.player-side {
+	background-color: #26532b;
+	margin-left: 1rem;
+	margin-right: 1rem;
+	padding: 6rem;
+}
+img {
+	height: 8rem;
+}
+
+.player-side {
+	display: flex;
+}
+
+.buttons {
+	background-color: #0f4413;
+	display: flex;
+	justify-content: space-around;
+	padding: 4rem;
+	margin-left: 1rem;
+	margin-right: 1rem;
+	margin-bottom: 1rem;
+}
+
+.hit,
+.stand,
+.reset {
+	width: 6rem;
+	height: 3rem;
+}
+
+li {
+	list-style: none;
 }
