--- a/public/screen.css
+++ b/public/screen.css
@@ -75,3 +75,25 @@ li {
 .dealer-text {
 	font-size: 30px;
 }
+
+.dealer-cards-container {
+	display: flex;
+}
+
+.card-backs {
+	margin: 0;
+}
+.card-backs img {
+	margin: 0;
+}
+
+.dealer-cards img {
+	margin: 0;
+}
+
+.dealer-score,
+.player-score {
+	margin-right: 1rem;
+	margin-left: 1rem;
+	text-shadow: -1px 0 white, 0 1px black, 1px 0 black, 0 -1px white;
+}
